--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>Title</title>
 </head>
 <body>
-
+<button type="button">Start Game</button>
+<button type="button">Load Game</button>
+<button type="button">Settings</button>
 </body>
 </html>
