--- a/www/index.html
+++ b/www/index.html
@@ -26,6 +26,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/core.js"></script>
     <script src="js/app.js"></script>
     <script src="js/thisionic.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/3.3.2/firebase.js"></script>
 
     <script>
       // This is called with the results from from FB.getLoginStatus().
@@ -129,6 +130,16 @@
       </ion-content>
     </ion-pane>
 
+    <script>
+      // Initialize Firebase
+      var config = {
+        apiKey: "AIzaSyD8yymwpm2Vdn3-iZ_xhDqSpyuqzlKNTSo",
+        authDomain: "matc-gp.firebaseapp.com",
+        databaseURL: "https://matc-gp.firebaseio.com",
+        storageBucket: "matc-gp.appspot.com",
+      };
+      firebase.initializeApp(config);
+    </script>
 
     <div id="status">
     </div>
