--- a/www/index.html
+++ b/www/index.html
@@ -23,8 +23,10 @@
 
     <!-- your app's js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/core.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="js/app.js"></script>
     <script src="js/thisionic.js"></script>
+    <script src="js/lootChance.js"></script>
     <script src="https://www.gstatic.com/firebasejs/3.3.2/firebase.js"></script>
 
     <script>
