--- a/www/index.html
+++ b/www/index.html
@@ -127,8 +127,7 @@
      the JavaScript SDK to present a graphical Login button that triggers
      the FB.login() function when clicked.
     -->
-        <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
-        </fb:login-button>
+        <fb:login-button scope="public_profile,email" onlogin="checkLoginState();"></fb:login-button>
       </ion-content>
     </ion-pane>
     <script src="https://www.gstatic.com/firebasejs/3.3.0/firebase.js"></script>
