--- a/www/index.html
+++ b/www/index.html
@@ -23,10 +23,14 @@
 
     <!-- your app's js -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/3.3.2/firebase.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/3.3.2/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/3.3.2/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/3.3.2/firebase-database.js"></script>
     <script src="js/app.js"></script>
     <script src="js/thisionic.js"></script>
     <script src="js/lootChance.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/3.3.2/firebase.js"></script>
+    <script src="js/locationlist.js"></script>
 
     <script>
       // This is called with the results from from FB.getLoginStatus().
@@ -116,6 +120,9 @@
       <ion-header-bar class="bar-stable">
         <h1 class="title">Survival Gears</h1>
       </ion-header-bar>
+      <ion-view>
+
+      </ion-view>
       <ion-content>
         <div ng-app="starter"><button class="button button-block">Start Game</button></div>
         <div ng-app="starter"><button class="button button-block">Load Game</button></div>
@@ -130,10 +137,7 @@
         </fb:login-button>
       </ion-content>
     </ion-pane>
-    <script src="https://www.gstatic.com/firebasejs/3.3.0/firebase.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/3.3.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/3.3.0/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/3.3.0/firebase-database.js"></script>
+
     <script>
       // Initialize Firebase
       var config = {
