--- a/www/index.html
+++ b/www/index.html
@@ -49,10 +49,10 @@
         <h1 class="title">Survival Gears</h1>
       </ion-header-bar>
       <ion-content>
-        <div ng-app="starter"><button class="button button-block">Start Game</button></div>
-        <div ng-app="starter"><button class="button button-block">Load Game</button></div>
-        <div ng-app="starter"><button class="button button-block">Settings</button></div>
-        <div ng-app="starter"><button class="button button-block" data-component="looting">Loot Test</button></div>
+        <div><button class="button button-block">Start Game</button></div>
+        <div><button class="button button-block">Load Game</button></div>
+        <div><button class="button button-block">Settings</button></div>
+        <div><button class="button button-block" data-component="looting">Loot Test</button></div>
       </ion-content>
     </ion-pane>
 
@@ -157,9 +157,9 @@
       <ion-header-bar class="bar-stable">
         <h1 class="title">Survival Gears</h1>
       </ion-header-bar>
-      <ion-view>
+      <!--<ion-view>-->
 
-      </ion-view>
+      <!--</ion-view>-->
       <ion-content>
         <div ng-app="starter"><button class="button button-block">Start Game</button></div>
         <div ng-app="starter"><button class="button button-block">Load Game</button></div>
@@ -175,16 +175,6 @@
       </ion-content>
     </ion-pane>
 
-    <script>
-      // Initialize Firebase
-      var config = {
-        apiKey: "AIzaSyD8yymwpm2Vdn3-iZ_xhDqSpyuqzlKNTSo",
-        authDomain: "matc-gp.firebaseapp.com",
-        databaseURL: "https://matc-gp.firebaseio.com",
-        storageBucket: "matc-gp.appspot.com",
-      };
-      firebase.initializeApp(config);
-    </script>
 
     <div id="status">
     </div>
