--- a/www/index.html
+++ b/www/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title></title>
 
-    <script src="https://www.gstatic.com/firebasejs/3.3.0/firebase.js"></script>
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
@@ -24,19 +23,25 @@
     <script src="cordova.js"></script>
 
     <!-- your app's js -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <!-- AngularJS -->
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
+
+    <!-- Firebase -->
+    <script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js"></script>
+
+    <!-- AngularFire -->
     <script src="https://cdn.firebase.com/libs/angularfire/2.0.2/angularfire.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/3.3.2/firebase.js"></script>
     <script src="js/app.js"></script>
     <script src="js/thisionic.js"></script>
     <script src="js/lootChance.js"></script>
     <script src="js/locationlist.js"></script>
 
-
-
   </head>
   <body ng-app="starter">
   <div id="fb-root"></div>
+
   <script>(function(d, s, id) {
     var js, fjs = d.getElementsByTagName(s)[0];
     if (d.getElementById(id)) return;
@@ -56,9 +61,6 @@
       </ion-content>
     </ion-pane>
 
-    <script src="https://www.gstatic.com/firebasejs/3.3.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/3.3.0/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/3.3.0/firebase-database.js"></script>
     <script>
       // Initialize Firebase
       var config = {
@@ -174,17 +176,6 @@
         </fb:login-button>
       </ion-content>
     </ion-pane>
-
-    <script>
-      // Initialize Firebase
-      var config = {
-        apiKey: "AIzaSyD8yymwpm2Vdn3-iZ_xhDqSpyuqzlKNTSo",
-        authDomain: "matc-gp.firebaseapp.com",
-        databaseURL: "https://matc-gp.firebaseio.com",
-        storageBucket: "matc-gp.appspot.com",
-      };
-      firebase.initializeApp(config);
-    </script>
 
     <div id="status">
     </div>
