--- a/www/index.html
+++ b/www/index.html
@@ -33,7 +33,6 @@
     <script src="js/locationlist.js"></script>
 
 
-
   </head>
   <body ng-app="starter">
   <div id="fb-root"></div>
@@ -161,10 +160,17 @@
 
       <!--</ion-view>-->
       <ion-content>
+        <div ng-class='{ show: visible, left: alignment === \"left\", right: alignment === \"right\" }' ng-transclude></div>
+        <menu visible="visible" alignment="left">
+          <menu-item hash="first-page">First Page></menu-item>
+          <menu-item hash="second-page">Second Page></menu-item>
+          <menu-item hash="third-page">Third Page></menu-item>
+
         <div ng-app="starter"><button class="button button-block">Start Game</button></div>
         <div ng-app="starter"><button class="button button-block">Load Game</button></div>
         <div ng-app="starter"><button class="button button-block">Settings</button></div>
         <div ng-app="starter"><button class="button button-block" data-component="looting">Loot Test</button></div>
+        </menu>
         <!--
      Below we include the Login Button social plugin. This button uses
      the JavaScript SDK to present a graphical Login button that triggers
@@ -174,7 +180,6 @@
         </fb:login-button>
       </ion-content>
     </ion-pane>
-
 
     <div id="status">
     </div>
