--- a/www/index.html
+++ b/www/index.html
@@ -120,17 +120,23 @@
         <h1 class="title">Survival Gears</h1>
       </ion-header-bar>
       <!--<ion-view>-->
+      <ion-side-menus>
+        <!-- Left menu -->
+        <ion-side-menu side="left">
+        </ion-side-menu>
 
+        <ion-side-menu-content>
+          <!-- Main content, usually <ion-nav-view> -->
+        </ion-side-menu-content>
+
+        <!-- Right menu -->
+        <ion-side-menu side="right">
+        </ion-side-menu>
+
+      </ion-side-menus>
       <!--</ion-view>-->
       <ion-content>
-        <div ng-class='{ show: visible, left: alignment === \"left\", right: alignment === \"right\" }' ng-transclude></div>
 
-        <button ng-click="showLeft($event)">Menu</button>
-
-        <menu visible="visible" alignment="left">
-          <menu-item hash="first-page">First Page></menu-item>
-          <menu-item hash="second-page">Second Page></menu-item>
-          <menu-item hash="third-page">Third Page></menu-item>
 
         <div ng-app="starter"><button class="button button-block">Start Game</button></div>
         <div ng-app="starter"><button class="button button-block">Load Game</button></div>
