--- a/www/index.html
+++ b/www/index.html
@@ -8,41 +8,44 @@
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <!--<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">-->
+    <!--<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">-->
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">-->
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.1/angular-ui-router.js"></script>
+    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.1/angular-ui-router.js"></script>-->
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
-    <!-- your app's js -->
     <!-- AngularJS -->
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
+    <!--<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>-->
 
     <!-- Firebase -->
-    <script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js"></script>
+    <!--<script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js"></script>-->
 
     <!-- AngularFire -->
     <script src="https://cdn.firebase.com/libs/angularfire/2.0.2/angularfire.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>-->
     <script src="https://www.gstatic.com/firebasejs/3.3.2/firebase.js"></script>
-    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <!--<script src="https://apis.google.com/js/platform.js" async defer></script>-->
+
+    <!-- your app's js -->
     <script src="js/app.js"></script>
-    <script src="js/facebook.js"></script>
-    <script src="js/thisionic.js"></script>
-    <script src="js/lootChance.js"></script>
-    <script src="js/locationlist.js"></script>
+    <!--<script src="js/facebook.js"></script>-->
+    <!--<script src="js/thisionic.js"></script>-->
+    <!--<script src="js/lootChance.js"></script>-->
+    <script src="js/locationList.component.js"></script>
+    <script src="js/startmenu.js"></script>
+    <script src="js/firebase.component.js"></script>
 
 
   </head>
   <script type="text/javascript">
-    var app = angular.module("demo", []);
+    var app = angular.module("starter");
 
     app.controller("modalDemo", function($scope, $rootScope) {
       $scope.leftVisible = false;
@@ -113,30 +116,17 @@
     });
   </script>
 
-  <body ng-app="starter", ng-controller="modalDemo">
+  <body ng-app="starter">
 
     <ion-pane>
       <ion-header-bar class="bar-stable">
         <h1 class="title">Survival Gears</h1>
-      </ion-header-bar>
-      <!--<ion-view>-->
-      <ion-side-menus>
-        <!-- Left menu -->
-        <ion-side-menu side="left">
-        </ion-side-menu>
-
-        <ion-side-menu-content>
-          <!-- Main content, usually <ion-nav-view> -->
-        </ion-side-menu-content>
-
-        <!-- Right menu -->
-        <ion-side-menu side="right">
-        </ion-side-menu>
-
-      </ion-side-menus>
-      <!--</ion-view>-->
       <ion-content>
-
+     <ion-view title="Side Menu">
+              <ion-nav-buttons side="left">
+                <button menu-toggle="left" class= "button button-icon icon ion-navicon"></button>
+              </ion-nav-buttons>
+     </ion-view>
 
         <div ng-app="starter"><button class="button button-block">Start Game</button></div>
         <div ng-app="starter"><button class="button button-block">Load Game</button></div>
@@ -152,38 +142,19 @@
         </fb:login-button><br><br>
         <div class="g-signin2" data-onsuccess="onSignIn"></div><br>
 
-        <form action="action_page.php">
-
-          <div class="container">
-            <label><b>Login With Your Email Address</b></label>
-            <input type="text" placeholder="Email" name="uname" required>
-
-            <input type="password" placeholder="Password" name="psw" required>
-
-            <button type="submit">Login</button>
-            <input type="checkbox" checked="checked"> Remember me
-          </div>
-
-          <div class="container" style="background-color:#f1f1f1">
-            <button type="button" class="cancelbtn">Cancel</button>
-            <span class="psw">Forgot <a href="#">password?</a></span>
-          </div>
-        </form>
-
+        <a href="#" onclick="signOut();">Signout</a>
+        <script>
+          function signOut() {
+            var auth2 = gapi.auth2.getAuthInstance();
+            auth2.signOut().then(function () {
+              console.log('User signed out.');
+            });
+          }
+        </script>
       </ion-content>
     </ion-pane>
 
     <div id="status">
     </div>
-    <script>
-      // Initialize Firebase
-      var config = {
-        apiKey: "AIzaSyD8yymwpm2Vdn3-iZ_xhDqSpyuqzlKNTSo",
-        authDomain: "matc-gp.firebaseapp.com",
-        databaseURL: "https://matc-gp.firebaseio.com",
-        storageBucket: "matc-gp.appspot.com",
-      };
-      firebase.initializeApp(config);
-    </script>
   </body>
 </html>
