--- a/www/index.html
+++ b/www/index.html
@@ -117,16 +117,10 @@
   </script>
 
   <body ng-app="starter">
-
+       <menu>
     <ion-pane>
       <ion-header-bar class="bar-stable">
         <h1 class="title">Survival Gears</h1>
-      <ion-content>
-     <ion-view title="Side Menu">
-              <ion-nav-buttons side="left">
-                <button menu-toggle="left" class= "button button-icon icon ion-navicon"></button>
-              </ion-nav-buttons>
-     </ion-view>
 
         <div ng-app="starter"><button class="button button-block">Start Game</button></div>
         <div ng-app="starter"><button class="button button-block">Load Game</button></div>
