--- a/www/index.html
+++ b/www/index.html
@@ -13,6 +13,7 @@
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js">
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
@@ -37,7 +38,7 @@
     <script src="js/app.js"></script>
     <!--<script src="js/facebook.js"></script>-->
     <!--<script src="js/thisionic.js"></script>-->
-    <!--<script src="js/lootChance.js"></script>-->
+    <script src="js/lootChance.js"></script>
     <script src="js/locationList.component.js"></script>
     <script src="js/startmenu.js"></script>
     <script src="js/firebase.component.js"></script>
