--- a/www/index.html
+++ b/www/index.html
@@ -13,7 +13,7 @@
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">-->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js">
+
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
@@ -31,11 +31,12 @@
     <!-- AngularFire -->
     <script src="https://cdn.firebase.com/libs/angularfire/2.0.2/angularfire.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/3.3.2/firebase.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!--<script src="https://apis.google.com/js/platform.js" async defer></script>-->
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
-    <!--<script src="js/facebook.js"></script>-->
+    <!--<script src="js/facebook.js"></script>
     <!--<script src="js/thisionic.js"></script>-->
     <script src="js/lootChance.js"></script>
     <script src="js/locationList.component.js"></script>
