--- a/www/index.html
+++ b/www/index.html
@@ -118,38 +118,37 @@
   </script>
 
   <body ng-app="starter">
-       <menu>
     <ion-pane>
       <ion-header-bar class="bar-stable">
         <h1 class="title">Survival Gears</h1>
 
-        <div ng-app="starter"><button class="button button-block">Start Game</button></div>
-        <div ng-app="starter"><button class="button button-block">Load Game</button></div>
-        <div ng-app="starter"><button class="button button-block">Settings</button></div>
-        <div ng-app="starter"><button class="button button-block" data-component="looting">Loot Test</button></div>
-        </menu>
-        <!--
-         Below we include the Login Button social plugin. This button uses
-         the JavaScript SDK to present a graphical Login button that triggers
-         the FB.login() function when clicked.
-        -->
-        <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
-        </fb:login-button><br><br>
-        <div class="g-signin2" data-onsuccess="onSignIn"></div><br>
+        <menu>
+          <div ng-app="starter"><button class="button button-block">Start Game</button></div>
+          <div ng-app="starter"><button class="button button-block">Load Game</button></div>
+          <div ng-app="starter"><button class="button button-block">Settings</button></div>
+          <div ng-app="starter"><button class="button button-block" data-component="looting">Loot Test</button></div>
+          <!--
+             Below we include the Login Button social plugin. This button uses
+             the JavaScript SDK to present a graphical Login button that triggers
+             the FB.login() function when clicked.
+           -->
+          <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
+          </fb:login-button><br><br>
+          <div class="g-signin2" data-onsuccess="onSignIn"></div><br>
 
-        <a href="#" onclick="signOut();">Signout</a>
-        <script>
-          function signOut() {
-            var auth2 = gapi.auth2.getAuthInstance();
-            auth2.signOut().then(function () {
-              console.log('User signed out.');
-            });
-          }
-        </script>
+          <a href="#" onclick="signOut();">Signout</a>
+        </menu>
       </ion-content>
     </ion-pane>
 
-    <div id="status">
-    </div>
+    <div id="status"></div>
+    <script>
+      function signOut() {
+        var auth2 = gapi.auth2.getAuthInstance();
+        auth2.signOut().then(function () {
+          console.log('User signed out.');
+        });
+      }
+    </script>
   </body>
 </html>
