--- a/www/index.html
+++ b/www/index.html
@@ -121,7 +121,6 @@
     <ion-pane>
       <ion-header-bar class="bar-stable">
         <h1 class="title">Survival Gears</h1>
-
         <menu>
           <div ng-app="starter"><button class="button button-block">Start Game</button></div>
           <div ng-app="starter"><button class="button button-block">Load Game</button></div>
@@ -138,7 +137,8 @@
 
           <a href="#" onclick="signOut();">Signout</a>
         </menu>
-      </ion-content>
+      </ion-header-bar>
+      <location-list></location-list>
     </ion-pane>
 
     <div id="status"></div>
