--- a/www/index.html
+++ b/www/index.html
@@ -38,6 +38,7 @@
     <!--<script src="js/thisionic.js"></script>-->
     <script src="js/lootChance.js"></script>
     <script src="js/locationList.component.js"></script>
+    <script src="js/homebase.component.js"></script>
     <script src="js/startmenu.js"></script>
     <script src="js/firebase.component.js"></script>
 
@@ -137,6 +138,7 @@
         </menu>
       </ion-header-bar>
       <location-list></location-list>
+      <homebase></homebase>
     </ion-pane>
 
     <div id="status"></div>
