--- a/www/index.html
+++ b/www/index.html
@@ -29,7 +29,8 @@
     <!--<script src="js/thisionic.js"></script>-->
     <script src="js/lootChance.js"></script>
     <script src="js/locationList.component.js"></script>
-    <script src="js/homebase.component.js"></script>
+    <!--<script src="js/homebase.component.js"></script>-->
+    <script src="js/inventory.component.js"></script>
     <script src="js/startmenu.js"></script>
     <script src="js/firebase.component.js"></script>
 
