--- a/www/index.html
+++ b/www/index.html
@@ -29,7 +29,7 @@
     <!--<script src="js/thisionic.js"></script>-->
     <script src="js/lootChance.js"></script>
     <script src="js/locationList.component.js"></script>
-    <!--<script src="js/homebase.component.js"></script>-->
+    <script src="js/homebase.component.js"></script>
     <script src="js/inventory.component.js"></script>
     <script src="js/startmenu.js"></script>
     <script src="js/firebase.component.js"></script>
@@ -121,8 +121,8 @@
       </div>
 
       <location-list></location-list>
-      <!--<homebase></homebase>-->
-      <inventory></inventory>
+      <homebase></homebase>
+      <inventory-list></inventory-list>
     </ion-pane>
 
     <div id="status"></div>
