--- a/www/index.html
+++ b/www/index.html
@@ -29,6 +29,7 @@
     <!--<script src="js/thisionic.js"></script>-->
     <script src="js/lootChance.js"></script>
     <script src="js/locationList.component.js"></script>
+    <script src="js/login.component.js"></script>
     <!--<script src="js/homebase.component.js"></script>-->
     <script src="js/inventory.component.js"></script>
     <script src="js/startmenu.js"></script>
@@ -96,35 +97,17 @@
 </script>
 
   <body ng-app="starter">
-    <ion-pane>
-      <ion-header-bar class="bar-stable">
-        <button class="left"><span class="ion-ios-location"></span></button>
-        <h1 class="title">Survival Gears</h1>
-        <button class="right"><span class="ion-flag"></span></button>
-      </ion-header-bar>
-      <div class="menu">
-        <div ng-app="starter"><button class="button button-block">Start Game</button></div>
-        <div ng-app="starter"><button class="button button-block">Load Game</button></div>
-        <div ng-app="starter"><button class="button button-block">Settings</button></div>
-        <div ng-app="starter"><button class="button button-block" data-component="looting">Loot Test</button></div>
-        <!--
-           Below we include the Login Button social plugin. This button uses
-           the JavaScript SDK to present a graphical Login button that triggers
-           the FB.login() function when clicked.
-         -->
-        <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
-        </fb:login-button>
-        <br><br>
-        <div class="g-signin2" data-onsuccess="onSignIn"></div><br>
-
-        <a href="#" onclick="signOut();">Signout</a>
-      </div>
-
-      <location-list></location-list>
-      <!--<homebase></homebase>-->
-      <inventory></inventory>
-    </ion-pane>
-
+  <ion-pane>
+    <ion-header-bar class="bar-stable">
+      <button class="left"><span class="ion-ios-location"></span></button>
+      <h1 class="title">Survival Gears</h1>
+      <button class="right"><span class="ion-flag"></span></button>
+    </ion-header-bar>
+    <location-list></location-list>
+    <login></login>
+    <!--<homebase></homebase>-->
+    <inventory></inventory>
+  </ion-pane>
     <div id="status"></div>
     <script>
       function signOut() {
