--- a/www/index.html
+++ b/www/index.html
@@ -1,99 +1,99 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-  <meta name="google-signin-client_id" content="1049868233251-oj6cqu5142p0spc3ms3bo1ghqbsuip0n.apps.googleusercontent.com">
-  <title>Survival Gears</title>
+    <head>
+      <meta charset="utf-8">
+      <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+      <meta name="google-signin-client_id" content="1049868233251-oj6cqu5142p0spc3ms3bo1ghqbsuip0n.apps.googleusercontent.com">
+      <title>Survival Gears</title>
 
-  <link href="lib/ionic/css/ionic.css" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet">
+      <link href="lib/ionic/css/ionic.css" rel="stylesheet">
+      <link href="css/style.css" rel="stylesheet">
 
-  <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
-  <link href="css/ionic.app.css" rel="stylesheet">-->
-    <!-- ionic/angularjs js -->
-    <script src="lib/ionic/js/ionic.bundle.js"></script>
+      <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
+      <link href="css/ionic.app.css" rel="stylesheet">-->
+      <!-- ionic/angularjs js -->
+      <script src="lib/ionic/js/ionic.bundle.js"></script>
 
-    <!-- cordova script (this will be a 404 during development) -->
-    <script src="cordova.js"></script>
+      <!-- cordova script (this will be a 404 during development) -->
+      <script src="cordova.js"></script>
 
 
-    <!-- AngularFire -->
-    <script src="https://cdn.firebase.com/libs/angularfire/2.0.2/angularfire.min.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/3.3.2/firebase.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+      <!-- AngularFire -->
+      <script src="https://cdn.firebase.com/libs/angularfire/2.0.2/angularfire.min.js"></script>
+      <script src="https://www.gstatic.com/firebasejs/3.3.2/firebase.js"></script>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
-    <!-- your app's js -->
-    <script src="js/app.js"></script>
-    <script src="js/facebook.js"></script>
-    <!--<script src="js/thisionic.js"></script>-->
-    <script src="js/lootChance.js"></script>
-    <script src="js/locationList.component.js"></script>
-    <script src="js/homebase.component.js"></script>
-    <script src="js/inventory.component.js"></script>
-    <script src="js/startmenu.js"></script>
-    <script src="js/firebase.component.js"></script>
+      <!-- your app's js -->
+      <script src="js/app.js"></script>
+      <script src="js/facebook.js"></script>
+      <!--<script src="js/thisionic.js"></script>-->
+      <script src="js/lootChance.js"></script>
+      <script src="js/locationList.component.js"></script>
+      <script src="js/homebase.component.js"></script>
+      <script src="js/inventory.component.js"></script>
+      <script src="js/startmenu.js"></script>
+      <script src="js/firebase.component.js"></script>
 
-  </head>
-  <script type="text/javascript">
-    var app = angular.module("starter");
+      <script type="text/javascript">
+        var app = angular.module("starter");
 
-    app.controller("modalDemo", function($scope, $rootScope) {
-      $scope.leftVisible = false;
-      $scope.rightVisible = false;
-      $scope.showLeft = function(e) {
-        $scope.leftVisible = true;
-        e.stopPropagation();
-      };
-      $scope.showRight = function(e) {
-        $scope.rightVisible = true;
-        e.stopPropagation();
-      };
+        app.controller("modalDemo", function($scope, $rootScope) {
+          $scope.leftVisible = false;
+          $scope.rightVisible = false;
+          $scope.showLeft = function(e) {
+            $scope.leftVisible = true;
+            e.stopPropagation();
+          };
+          $scope.showRight = function(e) {
+            $scope.rightVisible = true;
+            e.stopPropagation();
+          };
 
-      $rootScope.$on("documentClicked", _close);
-      $rootScope.$on("escapePressed", _close);
-      function _close() {
-        $scope.$apply(function() {
-          $scope.close();
+          $rootScope.$on("documentClicked", _close);
+          $rootScope.$on("escapePressed", _close);
+          function _close() {
+            $scope.$apply(function() {
+              $scope.close();
+            });
+          }
         });
-      }
-    });
-  app.run(function($rootScope) {
-    document.addEventListener("keyup", function(e) {
-      if (e.keyCode === 27)
-        $rootScope.$broadcast("escapePressed", e.target);
-    });
-    document.addEventListener("click", function(e) {
-      $rootScope.$broadcast("documentClicked", e.target);
-    });
-  });
-  app.directive("menu", function() {
-    return {
-      restrict: "E",
-      template: "<div ng-class='{ show: visible, left: alignment === \"left\", right: alignment === \"right\" }' ng-transclude></div>",
-      transclude: true,
-      scope: {
-        visible: "=",
-        alignment: "@"
-      }
-    };
-  });
-  app.directive("menuItem", function() {
-    return {
-      restrict: "E",
-      template: "<div ng-click='navigate()' ng-transclude></div>",
-      transclude: true,
-      scope: {
-        hash: "@"
-      },
-      link: function($scope) {
-        $scope.navigate = function() {
-          window.location.hash = $scope.hash;
-        }
-      }
-    }
-  });
-</script>
+        app.run(function($rootScope) {
+          document.addEventListener("keyup", function(e) {
+            if (e.keyCode === 27)
+              $rootScope.$broadcast("escapePressed", e.target);
+          });
+          document.addEventListener("click", function(e) {
+            $rootScope.$broadcast("documentClicked", e.target);
+          });
+        });
+        app.directive("menu", function() {
+          return {
+            restrict: "E",
+            template: "<div ng-class='{ show: visible, left: alignment === \"left\", right: alignment === \"right\" }' ng-transclude></div>",
+            transclude: true,
+            scope: {
+              visible: "=",
+              alignment: "@"
+            }
+          };
+        });
+        app.directive("menuItem", function() {
+          return {
+            restrict: "E",
+            template: "<div ng-click='navigate()' ng-transclude></div>",
+            transclude: true,
+            scope: {
+              hash: "@"
+            },
+            link: function($scope) {
+              $scope.navigate = function() {
+                window.location.hash = $scope.hash;
+              }
+            }
+          }
+        });
+      </script>
+  </head>
 
   <body ng-app="starter">
     <ion-pane>
@@ -112,11 +112,12 @@
            the JavaScript SDK to present a graphical Login button that triggers
            the FB.login() function when clicked.
          -->
-        <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
-        </fb:login-button>
-        <br><br>
-        <div class="g-signin2" data-onsuccess="onSignIn"></div><br>
-
+        <!--<fb:login-button scope="public_profile,email" onlogin="checkLoginState();">-->
+        <!--</fb:login-button>-->
+        <br>
+        <br>
+        <div class="g-signin2" data-onsuccess="onSignIn"></div>
+        <br>
         <a href="#" onclick="signOut();">Signout</a>
       </div>
 
