--- a/www/index.html
+++ b/www/index.html
@@ -130,13 +130,13 @@
     <inventory></inventory>
   </ion-pane>
     <div id="status"></div>
-    <script>
-      function signOut() {
-        var auth2 = gapi.auth2.getAuthInstance();
-        auth2.signOut().then(function () {
-          console.log('User signed out.');
-        });
-      }
-    </script>
+    <!--<script>-->
+      <!--function signOut() {-->
+        <!--var auth2 = gapi.auth2.getAuthInstance();-->
+        <!--auth2.signOut().then(function () {-->
+          <!--console.log('User signed out.');-->
+        <!--});-->
+      <!--}-->
+    <!--</script>-->
   </body>
 </html>
