--- a/www/index.html
+++ b/www/index.html
@@ -33,7 +33,7 @@
     <!--<script src="js/homebase.component.js"></script>-->
     <script src="js/inventory.component.js"></script>
     <script src="js/startmenu.js"></script>
-    <script src="js/firebase.component.js"></script>
+    <script src="js/firebase.service.js"></script>
 
   </head>
   <script type="text/javascript">
