changed inv icon

--- a/www/index.html
+++ b/www/index.html
@@ -102,7 +102,7 @@
     <ion-header-bar class="bar-stable">
       <button class="left"><span class="ion-ios-location"></span></button>
       <h1 class="title">Survival Gears</h1>
-      <button class="right"><span class="ion-flag"></span></button>
+      <button class="right"><span class="ion-cube"></span></button>
     </ion-header-bar>
     <location-list></location-list>
     <login></login>
