--- a/www/index.html
+++ b/www/index.html
@@ -25,7 +25,7 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
-    <script src="js/facebook.js"></script>
+    <!--<script src="js/facebook.js"></script>-->
     <!--<script src="js/thisionic.js"></script>-->
     <script src="js/lootChance.js"></script>
     <script src="js/locationList.component.js"></script>
