--- a/www/index.html
+++ b/www/index.html
@@ -25,6 +25,7 @@
     <script src="js/app.js"></script>
     <!--<script src="js/facebook.js"></script>-->
     <!--<script src="js/thisionic.js"></script>-->
+    <script src="js/lootTable.js"></script>
     <script src="js/lootChance.js"></script>
     <script src="js/locationList.component.js"></script>
     <script src="js/login.component.js"></script>
@@ -40,17 +41,29 @@
 </script>
 
   <body ng-app="starter">
-<ion-nav-view>
 
-</ion-nav-view>
     <ion-pane>
+      <!--<ion-side-menu-content>
+        <ion-nav-bar class="bar-positive">
+          <ion-nav-back-button></ion-nav-back-button>
+          <ion-nav-button side="left">
+            <button class="button button-icon button-clear ion-navicon" menu-toggle="left"></button>
+          </ion-nav-button>
+        </ion-nav-bar>
+      </ion-side-menu-content>-->
+
+      <ion-header-bar class="bar-stable">
+        <button class="left"><span class="ion-ios-location"></span></button>
+        <h1 class="title">Survival Gears</h1>
+        <button class="right"><span class="ion-cube"></span></button>
+      </ion-header-bar>
+
       <location-list></location-list>
       <login></login>
       <!--<homebase></homebase>-->
       <inventory></inventory>
     </ion-pane>
     <div id="status"></div>
-
 
   </body>
 </html>
