fixing service for login

--- a/www/index.html
+++ b/www/index.html
@@ -31,7 +31,7 @@
     <script src="js/login.component.js"></script>
     <!--<script src="js/homebase.component.js"></script>-->
     <script src="js/inventory.component.js"></script>
-    <script src="js/firebase.service.js"></script>
+    <script src="js/user.service.js"></script>
 
   </head>
   <script type="text/javascript">
