--- a/www/index.html
+++ b/www/index.html
@@ -53,7 +53,7 @@
       </ion-side-menu-content>-->
 
       <ion-header-bar class="bar-stable">
-        <button class="left"><span class="ion-ios-location"></span></button>
+        <button class="left"><span class="ion-ios-location" menu-toggle="left"></span></button>
         <h1 class="title">Survival Gears</h1>
         <button class="right"><span class="ion-cube"></span></button>
       </ion-header-bar>
@@ -67,3 +67,6 @@
 
   </body>
 </html>
+
+
+
