--- a/www/index.html
+++ b/www/index.html
@@ -63,7 +63,9 @@
       <!--<homebase></homebase>-->
       <inventory></inventory>
     </ion-pane>
-    <div id="status"></div>
+    <div id="status">
+
+    </div>
 
   </body>
 </html>
